--- a/07-journal-app/src/styles/base/_settings.scss
+++ b/07-journal-app/src/styles/base/_settings.scss
@@ -1,4 +1,8 @@
 // Colors
 $primary: #566688;
 $dark-grey: #393b4a;
-$light-gray: #d8d8d8;
+$light-grey: #d8d8d8;
+
+$white: #fff;
+$google-blue: #4285f4;
+$button-active-blue: #1669f2;
