--- a/07-journal-app/src/styles/styles.scss
+++ b/07-journal-app/src/styles/styles.scss
@@ -1,3 +1,4 @@
 @import './base/settings';
 @import './base/base';
-@import './components/auth'; // Components
+@import './components/auth';
+@import './components/buttons'; // Components
