--- a/07-journal-app/src/styles/styles.scss
+++ b/07-journal-app/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import './base/settings';
 @import './base/base';
 @import './components/auth';
-@import './components/buttons'; // Components
+@import './components/buttons';
+@import './components/links'; // Components
