Start styling sidebar

--- a/07-journal-app/src/styles/styles.scss
+++ b/07-journal-app/src/styles/styles.scss
@@ -2,4 +2,5 @@
 @import './base/base';
 @import './components/auth';
 @import './components/buttons';
-@import './components/links'; // Components
+@import './components/links';
+@import './components/journal'; // Components
