Creating an empty component when workspace is not active

--- a/07-journal-app/src/styles/styles.scss
+++ b/07-journal-app/src/styles/styles.scss
@@ -3,4 +3,5 @@
 @import './components/auth';
 @import './components/buttons';
 @import './components/links';
-@import './components/journal'; // Components
+@import './components/journal';
+@import './components/nothing'; // Components
