--- a/07-journal-app/src/styles/styles.scss
+++ b/07-journal-app/src/styles/styles.scss
@@ -4,4 +4,5 @@
 @import './components/buttons';
 @import './components/links';
 @import './components/journal';
-@import './components/nothing'; // Components
+@import './components/nothing';
+@import './components/notes'; // Components
