Delete note from AppJournal and Firebase

--- a/07-journal-app/src/styles/components/_buttons.scss
+++ b/07-journal-app/src/styles/components/_buttons.scss
@@ -34,6 +34,14 @@
 	width: 100%;
 }
 
+.btn-danger {
+	background-color: red;
+	transition: background-color 0.5s ease;
+	&:hover {
+		background-color: darken($color: red, $amount: 10);
+	}
+}
+
 .google-btn {
 	cursor: pointer;
 	margin-top: 5px;
