--- a/07-journal-app/src/styles/components/_notes.scss
+++ b/07-journal-app/src/styles/components/_notes.scss
@@ -45,6 +45,10 @@
 }
 
 .notes__image img {
-	box-shadow: 5px 5px $dark-grey;
+	&:hover {
+		opacity: 0.8;
+		height: 155px;
+		transition: all 0.3s ease;
+	}
 	height: 150px;
 }
